feat: canvas,svg,prototype

--- a/htmlCssJavascript/css/20200914transformCss/202009140001.css
+++ b/htmlCssJavascript/css/20200914transformCss/202009140001.css
@@ -78,12 +78,12 @@
     animation: rotate 60s infinite linear;
 } */
   
-.minutes-container {
+/* .minutes-container {
     animation: rotate 3600s infinite steps(60);
 }
 .seconds-container {
     animation: rotate 60s infinite steps(60);
-}
+} */
   
 
 .minutes-container {
