--- a/htmlCssJavascript/css/20200915svgCss/202009150001.css
+++ b/htmlCssJavascript/css/20200915svgCss/202009150001.css
@@ -1,11 +1,21 @@
-.HalfPixelLine{
+svg {
+    stroke: #000;
+    stroke-width: 5;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    fill: none;
+}
+  
+
+
+/* .HalfPixelLine{ */
     /* background: repeat-x top left url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1' height='1'><rect fill='black' x='0' y='0' width='1' height='0.5'/></svg>"); */
-    background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxMDAlJyBoZWlnaHQ9JzFweCc+PGxpbmUgeDE9JzAnIHkxPScwJyB4Mj0nMTAwJScgeTI9JzAnIHN0cm9rZT0nIzAwMCc+PC9saW5lPjwvc3ZnPg==");
+    /* background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxMDAlJyBoZWlnaHQ9JzFweCc+PGxpbmUgeDE9JzAnIHkxPScwJyB4Mj0nMTAwJScgeTI9JzAnIHN0cm9rZT0nIzAwMCc+PC9saW5lPjwvc3ZnPg==");
     height: 1px;
     width: 100%;
-  }
+  } */
 
-  .hr {
+  /* .hr {
     width: 300px;
     background-color: #000;
  }
@@ -44,4 +54,4 @@
     position: absolute;
     background-color: blue;
     left: 50%;
-  }
+  } */
